order approving stable